import{jsx as u}from"react/jsx-runtime";import{cleanup as r,render as s,screen as e}from"@testing-library/react";import{afterEach as l,describe as c,expect as t,it as o,vi as i}from"vitest";import{App as h}from"../../src/app/App";l(()=>{r(),i.unstubAllGlobals(),delete globalThis.__ENGINEERING_TEAM_RUNTIME_CONFIG__,window.sessionStorage.clear(),window.history.replaceState({},"","/sign-in")});function a(n){return globalThis.__ENGINEERING_TEAM_RUNTIME_CONFIG__=n,window.history.replaceState({},"","/sign-in"),s(u(h,{}))}c("auth sign-in visual states",()=>{o("matches the configured enterprise OIDC state",async()=>{const{container:n}=a({oidcDiscoveryUrl:"https://idp.example/.well-known/openid-configuration",oidcClientId:"browser-client",oidcRedirectUri:"https://app.example/auth/callback",internalAuthBootstrapEnabled:!1});await e.findByRole("heading",{name:"Sign in to the workflow app"}),t(e.getByRole("button",{name:"Continue with enterprise sign-in"})).toBeEnabled(),t(n.querySelector(".auth-card")).toMatchSnapshot()}),o("matches the magic-link state",async()=>{i.stubGlobal("fetch",i.fn(async()=>({ok:!1,status:401,json:async()=>({error:{code:"missing_auth_context",message:"A browser session is required."}})})));const{container:n}=a({productionAuthStrategy:"magic-link",internalAuthBootstrapEnabled:!0,oidcDiscoveryUrl:"https://idp.example/.well-known/openid-configuration",oidcClientId:"browser-client"});await e.findByRole("heading",{name:"Sign in to the workflow app"}),t(e.getByLabelText("Email address")).toBeInTheDocument(),t(e.queryByRole("button",{name:"Continue with enterprise sign-in"})).not.toBeInTheDocument(),t(e.queryByLabelText("Trusted auth code")).not.toBeInTheDocument(),t(n.querySelector(".auth-card")).toMatchSnapshot()}),o("matches the no-login-path configuration error state",async()=>{const{container:n}=a({internalAuthBootstrapEnabled:!1});await e.findByRole("heading",{name:"Sign in to the workflow app"}),t(e.getByRole("button",{name:"Continue with enterprise sign-in"})).toBeDisabled(),t(e.getByRole("alert")).toHaveTextContent("This deployment is missing enterprise auth configuration."),t(n.querySelector(".auth-card")).toMatchSnapshot()}),o("matches the local internal fallback state",async()=>{const{container:n}=a({internalAuthBootstrapEnabled:!0});await e.findByRole("heading",{name:"Sign in to the workflow app"}),t(e.getByLabelText("Trusted auth code")).toBeInTheDocument(),t(n.querySelector(".auth-card")).toMatchSnapshot()})});
